[package]
authors = [
  "Jorge Aparicio <jorge@japaric.io>",
  "Per Lindgren <per.lindgren@ltu.se>",
]
categories = ["concurrency", "embedded", "no-std"]
description = "Real Time For the Masses (RTFM) framework for ARM Cortex-M microcontrollers"
documentation = "https://docs.rs/cortex-m-rtfm"
keywords = ["arm", "cortex-m"]
license = "MIT OR Apache-2.0"
name = "cortex-m-rtfm"
repository = "https://github.com/japaric/cortex-m-rtfm"
version = "0.3.1"

[dependencies]
cortex-m = "0.4.0"
cortex-m-rtfm-macros = { path = "macros", version = "0.3.0" }
rtfm-core = "0.2.0"
untagged-option = "0.1.1"

#[target.'cfg(target_arch = "x86_64")'.dev-dependencies]
#compiletest_rs = "0.3.5"

[dev-dependencies.cortex-m-rt]
features = ["abort-on-panic"]
version = "0.3.9"

[dev-dependencies.stm32f413]
git = "https://gitlab.henriktjader.com/pln/stm32f413.git"
features = ["rt"]
version = "0.2.0"


[dev-dependencies.klee]
path = "./klee"

[features]
wcet_bkpt = [] 
wcet_nop = []
klee_mode = ["cortex-m-rtfm-macros/klee_mode", "klee/klee_mode"] 

cm7-r0p1 = ["cortex-m/cm7-r0p1"]

[profile.dev]
codegen-units = 1
incremental = false
lto = true
panic = "abort"

[profile.release]
lto = true
debug = true
panic = "abort"