[package]
authors = ["Jorge Aparicio <jorge@japaric.io>"]
categories = ["concurrency", "embedded", "no-std"]
description = "Procedural macros of the cortex-m-rtfm crate"
documentation = "https://docs.rs/cortex-m-rtfm-macros"
keywords = ["arm", "cortex-m"]
license = "MIT OR Apache-2.0"
name = "cortex-m-rtfm-macros"
repository = "https://github.com/japaric/cortex-m-rtfm"
version = "0.3.0"


[dependencies]
error-chain = "0.10.0"
quote = "0.3.15"
#rtfm-syntax = "0.2.1"
#rtfm-syntax =  { path = "../../rtfm-syntax", version = "0.2.1"  }
rtfm-syntax =  { git = "https://github.com/perlindgren/rtfm-syntax.git", version = "0.2.2"  }
syn = "0.11.11"

#[replace]
#"rtfm-syntax:0.2.1" = { path = '../../rtfm-syntax' }

[dependencies.klee]
path = "../klee"

[lib]
proc-macro = true

[features]
klee_mode = [] 
wcet_bkpt = [] 
wcet_nop = [] 